--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 data/
 certs/
 bin/
+.dotnet/
+.local/
+.nuget/
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
